--- a/changelog/2016.22.md
+++ b/changelog/2016.22.md
@@ -4,3 +4,4 @@
 
 - Moved the Starmap and Team repos to GitBook.
 - Created scaffolding repositories for Swift, Objective-C, Android, and JavaScript.
+- Began [experimenting with Swift Tween Expressions](https://github.com/material-motion/material-motion-experiments-swift/tree/master/tween-expressions).
