--- a/changelog/2016.23.md
+++ b/changelog/2016.23.md
@@ -1,1 +1,5 @@
 # 2016 Week 23 (Start of June) Changelog
+
+- Books are now being mirrored to GitHub. [Learn more](updating_our_books.md).
+- Mark published an [Android conventions repo](https://github.com/material-motion/material-motion-conventions-android).
+- 
