--- a/weekly_updates/2016-07-06.md
+++ b/weekly_updates/2016-07-06.md
@@ -28,4 +28,4 @@ We built our first MVP of a “Draggable” interaction on iOS.
 
 ## Learn more
 
-Join us on Discord! [discord.gg/ZJyGXza](https://discord.gg/ZJyGXza)Previous weekly updates: [go/odeon-weekly-update](http://go/odeon-weekly-update)
+Join us on Discord! [discord.gg/ZJyGXza](https://discord.gg/ZJyGXza)
