--- a/weekly_updates/2016-07-20.md
+++ b/weekly_updates/2016-07-20.md
@@ -6,13 +6,13 @@
 
 ## 🌟 Starmap 🗺 *long-term, multi-year plans*
 
-📝 Drafting our **serialization** plans. [Learn more](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/serialization.html).
+No updates this week.
 
 ## 🏎 Roadmap 🗺 *short-term, multi-week plans*
 
               runtime          catalog
              /                /
-    android 🎉------🚩------🚩    🌱       🌱
+    android 🎉------📝------🚩    🌱       🌱
     apple   🎉------📝------🚩     open terrain
     web     📝------🚩------🚩         🌱
                      \
