--- a/weekly_updates/2016-07-20.md
+++ b/weekly_updates/2016-07-20.md
@@ -20,33 +20,21 @@ No updates this week.
 
 ## Android platform
 
-🎉 **Runtime** v1.0.0 released! [Release notes](https://github.com/material-motion/material-motion-runtime-android/releases/tag/1.0.0). [Documentation](https://material-motion.github.io/material-motion-runtime-android/).
+📝 Inter-repository dependency management workflow now defined.
 
-📝 Release process, package management, and versioning being refined. [Learn more](https://github.com/material-motion/material-motion-team/tree/develop/generators/generator-mm-github/app/templates/android).
-
-📝 **Transitions** MVP milestone now available. [The milestone](https://github.com/material-motion/material-motion-transitions-android/milestone/1).
+📝 **Transitions** MVP work initiated. [The milestone](https://github.com/material-motion/material-motion-transitions-android/milestone/1).
 
 ## Apple platforms
 
-🎉 **Runtime** v1.0.0 released! [Release notes](https://github.com/material-motion/material-motion-runtime-objc/releases/tag/v1.0.0). [Documentation](https://material-motion.github.io/material-motion-runtime-objc/).
-
-🎉 Catalog by convention v1.0.0 released! [Release notes](https://github.com/material-foundation/cocoapods-catalog-by-convention/releases/tag/v1.0.1). [Documentation](https://material-foundation.github.io/cocoapods-catalog-by-convention/).
-
-📝 **Transitions** MVP is underway. [The milestone](https://github.com/material-motion/material-motion-transitions-objc/milestone/1).
+📝 **Transitions** MVP work initiated. [The milestone](https://github.com/material-motion/material-motion-transitions-objc/milestone/1).
 
 ## Web frameworks
 
-📝 **Runtime** MVP nearing completion. [The milestone](https://github.com/material-motion/material-motion-experiments-js/milestone/3).
+📝 **Runtime** MVP in progress. [The milestone](https://github.com/material-motion/material-motion-experiments-js/milestone/3).
 
 ## Tools
 
-🎉 **mdm release** automates most of the heavy lifting for our release process. [Learn more](https://github.com/material-motion/material-motion-team/tree/develop/contributor_tools/release).
-
-🎉 **Milemarker** allows anyone to get a high-level overview of the project and its status.
-[View the dashboard](https://material-motion.github.io/material-motion-milemarker/?filterby=appleos). Note that you can star any card and build your own dashboard.
-All data is pulled live from GitHub. [Code available here](https://github.com/material-motion/material-motion-milemarker).
-
-![](../_assets/milemarker.png)
+🎉 **yo mm-github** generates a scaffolding GitHub repository for Android and Objective-C projects.
 
 ## Learn more
 
