--- a/weekly_updates/2016-07-20.md
+++ b/weekly_updates/2016-07-20.md
@@ -30,7 +30,8 @@ No updates this week.
 
 ## Web frameworks
 
-📝 **Runtime** MVP in progress. [The milestone](https://github.com/material-motion/material-motion-experiments-js/milestone/3).
+📝 **Runtime** MVP in progress. [The milestone](https://github.com/material-motion/material-motion-experiments-js/milestone/3).  
+💡 Exploring baking [RX](http://reactivex.io/) [Observables](https://www.youtube.com/watch?v=DqMFX91ToLw) into the runtime.
 
 ## Tools
 
