--- a/weekly_updates/2016-07-20.md
+++ b/weekly_updates/2016-07-20.md
@@ -4,11 +4,11 @@
 
 🏛  Invested in **tooling** this week.
 
-## 🌟 Starmap 🗺 *long-term, multi-year plans*
+## 🌟 Starmap 🗺
 
 No updates this week.
 
-## 🏎 Roadmap 🗺 *short-term, multi-week plans*
+## 🏎 Roadmap 🗺
 
               runtime          catalog
              /                /
