--- a/weekly_updates/2016-07-27.md
+++ b/weekly_updates/2016-07-27.md
@@ -2,7 +2,7 @@
 
 ## 🌟 Starmap 🗺
 
-[Garbage-collectable performers](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/runtime/scheduler.html).
+📝 [Garbage-collectable performers](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/runtime/scheduler.html).
 
 ## 🏎 Roadmap 🗺
 
@@ -16,22 +16,15 @@
 
 ## Android platform
 
-📝 Inter-repository dependency management workflow now defined.
-
-📝 **Transitions** MVP work initiated. [The milestone](https://github.com/material-motion/material-motion-transitions-android/milestone/1).
+📝 **Transitions** MVP in progress. [The milestone](https://github.com/material-motion/material-motion-transitions-android/milestone/1).
 
 ## Apple platforms
 
-📝 **Transitions** MVP work initiated. [The milestone](https://github.com/material-motion/material-motion-transitions-objc/milestone/1).
+📝 **Transitions** MVP in progress. [The milestone](https://github.com/material-motion/material-motion-transitions-objc/milestone/1).
 
 ## Web frameworks
 
 📝 **Runtime** MVP in progress. [The milestone](https://github.com/material-motion/material-motion-experiments-js/milestone/3).  
-💡 Exploring baking [RX](http://reactivex.io/) [Observables](https://www.youtube.com/watch?v=DqMFX91ToLw) into the runtime.
-
-## Tools
-
-🎉 **yo mm-github** generates a scaffolding GitHub repository for Android and Objective-C projects.
 
 ## Learn more
 
