--- a/weekly_updates/2016-07-27.md
+++ b/weekly_updates/2016-07-27.md
@@ -20,6 +20,10 @@
 
 ## Apple platforms
 
+🎉 **Core Animation** motion family now available. [View the source](https://github.com/material-motion/material-motion-family-coreanimation-swift).
+
+🎉 **Swift 3** now actively supported.
+
 📝 **Transitions** MVP in progress. [The milestone](https://github.com/material-motion/material-motion-transitions-objc/milestone/1).
 
 ## Web frameworks
