--- a/weekly_updates/2016-07-27.md
+++ b/weekly_updates/2016-07-27.md
@@ -22,7 +22,7 @@
 
 🎉 **Core Animation** motion family now available. [View the source](https://github.com/material-motion/material-motion-family-coreanimation-swift).
 
-🎉 **Swift 3** now actively supported.
+🎉 Examples, unit tests, and motion families now being written in Swift 3. Core components will still be built in Objective-C.
 
 📝 **Transitions** MVP in progress. [The milestone](https://github.com/material-motion/material-motion-transitions-objc/milestone/1).
 
