--- a/weekly_updates/2016-07-27.md
+++ b/weekly_updates/2016-07-27.md
@@ -28,7 +28,8 @@
 
 ## Web frameworks
 
-📝 **Runtime** MVP in progress. [The milestone](https://github.com/material-motion/material-motion-experiments-js/milestone/3).  
+🎉 **Runtime** MVP landed. [The milestone](https://github.com/material-motion/material-motion-experiments-js/milestone/3).  
+📝 **Runtime** Exploring usage with a virtual DOM. [The milestone](https://github.com/material-motion/material-motion-experiments-js/milestone/2).  
 
 ## Learn more
 
