--- a/weekly_updates/2016-07-27.md
+++ b/weekly_updates/2016-07-27.md
@@ -1,5 +1,9 @@
 # July 20-27, 2016
 
+## Meta
+
+📝 Heads down on building out Transitions.
+
 ## 🌟 Starmap 🗺
 
 📝 [Garbage-collectable performers](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/runtime/scheduler.html).
