--- a/weekly_updates/2016-08-03.md
+++ b/weekly_updates/2016-08-03.md
@@ -6,7 +6,7 @@
 
 ## 🌟 Starmap 🗺
 
-📝 [Garbage-collectable performers](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/runtime/scheduler.html).
+No updates this week.
 
 ## 🏎 Roadmap 🗺
 
@@ -14,7 +14,7 @@
              /                /
     android 🎉------📝------🚩    🌱       🌱
     apple   🎉------📝------🚩     open terrain
-    web     📝------🚩------🚩         🌱
+    web     🎉------🚩------🚩         🌱
                      \
                       transitions
 
