--- a/weekly_updates/2016-07-27.md
+++ b/weekly_updates/2016-07-27.md
@@ -14,7 +14,7 @@
              /                /
     android 🎉------📝------🚩    🌱       🌱
     apple   🎉------📝------🚩     open terrain
-    web     📝------🚩------🚩         🌱
+    web     🎉------🚩------🚩         🌱
                      \
                       transitions
 
