--- a/weekly_updates/2016-08-03.md
+++ b/weekly_updates/2016-08-03.md
@@ -26,13 +26,12 @@ No updates this week.
 
 🎉 **Core Animation** motion family now available. [View the source](https://github.com/material-motion/material-motion-family-coreanimation-swift).
 
-🎉 Examples, unit tests, and motion families now being written in Swift 3. Core components will still be built in Objective-C.
+🎉 `apidiff` tool for generating release notes now available.
 
 📝 **Transitions** MVP in progress. [The milestone](https://github.com/material-motion/material-motion-transitions-objc/milestone/1).
 
 ## Web frameworks
 
-🎉 **Runtime** MVP landed. [The milestone](https://github.com/material-motion/material-motion-experiments-js/milestone/3).  
 📝 **Runtime** Exploring usage with a virtual DOM. [The milestone](https://github.com/material-motion/material-motion-experiments-js/milestone/2).  
 
 ## Learn more
