--- a/weekly_updates/2016-08-03.md
+++ b/weekly_updates/2016-08-03.md
@@ -26,13 +26,15 @@ No updates this week.
 
 🎉 **Core Animation** motion family now available. [View the source](https://github.com/material-motion/material-motion-family-coreanimation-swift).
 
-🎉 `apidiff` tool for generating release notes now available.
-
 📝 **Transitions** MVP in progress. [The milestone](https://github.com/material-motion/material-motion-transitions-objc/milestone/1).
 
 ## Web frameworks
 
 📝 **Runtime** Exploring usage with a virtual DOM. [The milestone](https://github.com/material-motion/material-motion-experiments-js/milestone/2).  
+
+## Tooling
+
+🎉 `apidiff` tool for generating release notes now available.
 
 ## Learn more
 
