--- a/weekly_updates/2016-08-03.md
+++ b/weekly_updates/2016-08-03.md
@@ -32,7 +32,7 @@ No updates this week.
 
 ## Tooling
 
-🎉 `apidiff` tool for generating release notes now available.
+🎉 `apidiff` tool for generating release notes now available for iOS. Android support in progress.
 
 ## Learn more
 
