--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -1,2 +1,32 @@
 # August 11-17, 2016
 
+## Meta
+
+🏠 NYC core team members back in NYC.
+
+## 🌟 Starmap 🗺
+
+📝 Drafting the [Motion family](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/motion-family.html) and [Serialization](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/serialization.html) spec.
+
+## 🏎 Roadmap 🗺
+
+              runtime          catalog
+             /                /
+    android 🎉------📝------🚩    🌱       🌱
+    apple   🎉------📝------🚩     open terrain
+    web     🎉------🚩------🚩         🌱
+                     \
+                      transitions
+
+## Android platform
+
+## Apple platforms
+
+## Web frameworks
+
+## Tooling
+
+## Learn more
+
+Join us on Discord! [discord.gg/ZJyGXza](https://discord.gg/ZJyGXza)
+
