--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -22,6 +22,10 @@
 
 ## Apple platforms
 
+🎉 [Gestures](https://github.com/material-motion/material-motion-family-gestures-swift) motion family now available.
+
+🎉 [POP](https://github.com/material-motion/material-motion-family-pop-swift) motion family now available.
+
 ## Web frameworks
 
 ## Tooling
