--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -1,5 +1,16 @@
 # August 11-17, 2016
 
+## Hackweek summary
+
+The core team met in San Francisco last week for an in-person hackathon. Here's the summary of things we explored:
+
+- Composability of plans/performers. [Read the spec](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/runtime/performer-composition.html).
+- Tossable demo for Android, Apple, and Web.
+
+![](2016-08-17-tossable-apple.gif)
+
+
+
 ## Meta
 
 🏠 NYC core team members back in NYC.
@@ -8,19 +19,13 @@
 
 📝 Drafting the [Motion family](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/motion-family.html) and [Serialization](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/serialization.html) spec.
 
-## 🏎 Roadmap 🗺
-
-              runtime          catalog
-             /                /
-    android 🎉------📝------🚩    🌱       🌱
-    apple   🎉------📝------🚩     open terrain
-    web     🎉------🚩------🚩         🌱
-                     \
-                      transitions
-
 ## Android platform
 
+![](2016-08-17-Techstack-android.svg)
+
 ## Apple platforms
+
+![](2016-08-17-Techstack-apple.svg)
 
 🎉 [Gestures](https://github.com/material-motion/material-motion-family-gestures-swift) motion family now available.
 
@@ -28,7 +33,11 @@
 
 ## Web frameworks
 
+![](2016-08-17-Techstack-javascript.svg)
+
 ## Tooling
+
+📝 Improving our [team onboarding](https://material-motion.gitbooks.io/material-motion-team/content/essentials/frequent_contributors/onboarding.html) documentation and tools as we've been taking on new 20%'ers.
 
 ## Learn more
 
