--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -5,11 +5,12 @@
 The core team met in San Francisco last week for an in-person hackathon. Here's the summary of things we explored:
 
 - Composability of plans/performers. [Read the spec](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/runtime/performer-composition.html).
-- Tossable demo for Android, Apple, and Web.
+- Tossable demo built for Android and iOS.
+- Draggable demo built for Web.
+- Expanding cards interaction for iOS.
+- Implementation of an animation using Material Motion in a Swift Playground.
 
-![](2016-08-17-tossable-apple.gif)
-
-
+Composability is the highlight of the week. This feature is what will allow us to create platform-agnostic *motion languages*.
 
 ## Meta
 
