--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -20,6 +20,8 @@ Composability is the highlight of the week. This feature is what will allow us t
 
 📝 Drafting the [Motion family](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/motion-family.html) and [Serialization](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/serialization.html) spec.
 
+📝 Drafting the [Gesturable](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/motion_family/gesturable.html) motion family.
+
 ## Android platform
 
 ![](2016-08-17-Techstack-android.svg)
