--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -22,21 +22,19 @@ Composability is the highlight of the week. This feature is what will allow us t
 
 📝 Drafting the [Gesturable](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/motion_family/gesturable.html) motion family.
 
+📝 Defining our tech stack and ownership areas. The goal is to ensure that we have discrete areas of ownership for new team members.
+
+![](2016-08-17-Techstack.svg)
+
 ## Android platform
 
-![](2016-08-17-Techstack-android.svg)
-
 ## Apple platforms
-
-![](2016-08-17-Techstack-apple.svg)
 
 🎉 [Gestures](https://github.com/material-motion/material-motion-family-gestures-swift) motion family now available.
 
 🎉 [POP](https://github.com/material-motion/material-motion-family-pop-swift) motion family now available.
 
 ## Web frameworks
-
-![](2016-08-17-Techstack-javascript.svg)
 
 ## Tooling
 
