--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -26,6 +26,10 @@ Composability is the highlight of the week. This feature is what will allow us t
 
 ![](2016-08-17-Techstack.svg)
 
+**Bridge motion families** are libraries that allow material motion users to incorporate existing platform animation and interaction libraries.
+
+**Material motion families** are our platform-agnostic libraries.
+
 ## Android platform
 
 ## Apple platforms
