--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -10,7 +10,7 @@ The core team met in San Francisco last week for an in-person hackathon. Here's 
 - Expanding cards interaction for iOS.
 - Implementation of an animation using Material Motion in a Swift Playground.
 
-Composability is the highlight of the week. This feature is what will allow us to create platform-agnostic *motion languages*.
+Composability is the highlight of the week. This feature is what will allow us to create platform-agnostic motion families.
 
 ## Meta
 
