--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -40,6 +40,8 @@ Composability is the highlight of the week. This feature is what will allow us t
 
 ## Web frameworks
 
+📝 **Prototyping** Circles interaction.
+
 ## Tooling
 
 📝 Improving our [team onboarding](https://material-motion.gitbooks.io/material-motion-team/content/essentials/frequent_contributors/onboarding.html) documentation and tools as we've been taking on new 20%'ers.
