--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -16,6 +16,19 @@ Composability is the highlight of the week. This feature is what will allow us t
 
 🏠 NYC core team members back in NYC.
 
+## 🏎 Roadmap 🗺
+
+              runtime         transitions catalog
+             /               /
+    android 🎉------📝------🚩    🌱       🌱
+    apple   🎉------📝------🚩     open terrain
+                     \
+                      transitions
+    
+    web     🎉------📝                🌱
+                     \
+                      prototypes
+
 ## 🌟 Starmap 🗺
 
 📝 Drafting the [Motion family](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/motion-family.html) and [Serialization](https://material-motion.gitbooks.io/material-motion-starmap/content/specifications/serialization.html) spec.
