--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -45,6 +45,8 @@ Composability is the highlight of the week. This feature is what will allow us t
 
 ## Android platform
 
+📝 **Prototyping** Tossable demo.
+
 ## Apple platforms
 
 🎉 [Gestures](https://github.com/material-motion/material-motion-family-gestures-swift) motion family now available.
