--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -47,6 +47,16 @@ Composability is the highlight of the week. This feature is what will allow us t
 
 📝 **Prototyping** Tossable demo.
 
+📝 ComposablePerformance in runtime.
+
+📝 Physics engine library.
+
+📝 Physics motion family.
+
+📝 Gestural library - PanGestureDetector.
+
+📝 Gestural motion family.
+
 ## Apple platforms
 
 🎉 [Gestures](https://github.com/material-motion/material-motion-family-gestures-swift) motion family now available.
