--- a/weekly_updates/2016-08-17.md
+++ b/weekly_updates/2016-08-17.md
@@ -45,19 +45,21 @@ Composability is the highlight of the week. This feature is what will allow us t
 
 ## Android platform
 
-📝 **Prototyping** Tossable demo.
+🎉 **Prototyping** Tossable demo.
 
-📝 ComposablePerformance in runtime.
+🎉 Runtime now supports composable plans.
+
+📝 **Motion family** Physics.
+
+📝 **Motion family** Gestural.
 
 📝 Physics engine library.
 
-📝 Physics motion family.
-
 📝 Gestural library - PanGestureDetector.
 
-📝 Gestural motion family.
-
 ## Apple platforms
+
+🎉 Runtime now supports composable plans.
 
 🎉 [Gestures](https://github.com/material-motion/material-motion-family-gestures-swift) motion family now available.
 
